Inclusão de tabela em substituição dos componentes repos e starred

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<router-outlet></router-outlet>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+
+			<mat-toolbar>
+				<a mat-list-item target="_self" [routerLink]="['users']" class="item">
+					Teste Compasso - Boanerges Souza
+				</a>
+			</mat-toolbar>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<router-outlet></router-outlet>
+		</div>
+	</div>
+</div>
