--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-4">
-			<mat-card class="margin">
+			<mat-card class="margin full-width default-box-shadow">
 				<div class="row align-items-center">
 					<div class="col-md-12 justify-content-center">
 						<img [src]="user.avatar_url" class="avatar-img">
@@ -31,11 +31,24 @@
 						repos</button>
 				</div>
 			</div>
-
-
 		</div>
 		<div class="col-md-8">
-			<router-outlet></router-outlet>
+			<table mat-table [dataSource]="repos" class="margin full-width default-box-shadow	">
+				<!-- Position Column class="mat-column-name"-->
+				<ng-container matColumnDef="name">
+					<th mat-header-cell *matHeaderCellDef> Nome </th>
+					<td mat-cell *matCellDef="let element"> {{element.name}} </td>
+				</ng-container>
+
+				<!-- Name Column class="mat-column-owner"-->
+				<ng-container matColumnDef="owner">
+					<th mat-header-cell *matHeaderCellDef> Proprietário </th>
+					<td mat-cell *matCellDef="let element"> {{element.owner}} </td>
+				</ng-container>
+
+				<tr mat-header-row *matHeaderRowDef="columnsName"></tr>
+				<tr mat-row *matRowDef="let row; columns: columnsName;"></tr>
+			</table>
 		</div>
 	</div>
 </div>
