--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,17 +1,18 @@
-<div class="container">
+<div class="container fade-in">
 	<div class="row align-items-center">
 		<div class="col-md-12">
 
-			<h1>Usuário</h1>
-			<form >
+			<h2>{{ 'userComponentTitle' | translate }}</h2>
+			<form>
 				<mat-form-field class="full-width">
-					<input matInput placeholder="Nome do usuário" [(ngModel)]="userName"
-					ngModel #inputFilter name="inputFilter" class="full-width">
+					<input matInput placeholder="{{ 'userLogin' | translate }}" [formControl]="userName" [(ngModel)]="userName.value" required
+						(mouseover)="doSomething(userName)" ngModel #inputFilter name="inputFilter" class="full-width">
 				</mat-form-field>
-				<button (click)="getUser(userName)" class="btn btn-primary margin-bottom">Buscar usuário</button>
+				<button (click)="getUser(userName.value)" class="btn btn-primary margin-bottom"
+					[disabled]="userName?.errors?.required"> {{ 'searchUser' | translate }} </button> 
 			</form>
 			<mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
-			<mat-card *ngIf="user && foundUser" (click)="goToUserDetail()" class="full-width default-box-shadow">
+			<mat-card *ngIf="user && foundUser" (click)="goToUserDetail()" class="full-width default-box-shadow fade-in">
 				<div class="row align-items-center">
 					<div class="col-md-3 justify-content-center">
 						<img [src]="user.avatar_url" class="avatar-img">
@@ -19,12 +20,12 @@
 					<div class="col-md-9 justify-content-md-center">
 						<div class="row">
 							<div class="col-md-12">
-								Nome: {{user.name}}
+								{{ name | translate}}: {{user.name}}
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								E-mail: {{user.email}}
+								{{ 'email' | translate}}: {{user.email}}
 							</div>
 						</div>
 					</div>
