--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -5,14 +5,16 @@
 			<h2>{{ 'userComponentTitle' | translate }}</h2>
 			<form>
 				<mat-form-field class="full-width">
-					<input matInput placeholder="{{ 'userLogin' | translate }}" [formControl]="userName" [(ngModel)]="userName.value" required
-						(mouseover)="doSomething(userName)" ngModel #inputFilter name="inputFilter" class="full-width">
+					<input matInput placeholder="{{ 'userLogin' | translate }}" [formControl]="userName"
+						[(ngModel)]="userName.value" required ngModel #inputFilter name="inputFilter"
+						class="full-width">
 				</mat-form-field>
 				<button (click)="getUser(userName.value)" class="btn btn-primary margin-bottom"
-					[disabled]="userName?.errors?.required"> {{ 'searchUser' | translate }} </button> 
+					[disabled]="userName?.errors?.required"> {{ 'searchUser' | translate }} </button>
 			</form>
 			<mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
-			<mat-card *ngIf="user && foundUser" (click)="goToUserDetail()" class="full-width default-box-shadow fade-in">
+			<mat-card *ngIf="user && foundUser" (click)="goToUserDetail()"
+				class="full-width default-box-shadow fade-in">
 				<div class="row align-items-center">
 					<div class="col-md-3 justify-content-center">
 						<img [src]="user.avatar_url" class="avatar-img">
