Criação de PWA Inclusão do projeto no Heroku Inclusão do filtro para os repositórios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,6 @@
 		</div>
 	</div>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<div class="padding">
+	<router-outlet></router-outlet>
+</div>
