--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .item {
   color: var(--line-a-color);
   text-decoration: none;
-	border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 0.8em;
 }
